@@ -280,11 +280,43 @@ namespace libtorrent
 		enum block_state_t
 		{ none, requested, writing, finished };
 
-		tcp::endpoint peer;
+	private:
+		union
+		{
+			address_v4::bytes_type v4;
+			address_v6::bytes_type v6;
+		} addr;
+
+		boost::uint16_t port;
+	public:
+
+		void set_peer(tcp::endpoint const& ep)
+		{
+			is_v6_addr = ep.address().is_v6();
+			if (is_v6_addr)
+				addr.v6 = ep.address().to_v6().to_bytes();
+			else
+				addr.v4 = ep.address().to_v4().to_bytes();
+			port = ep.port();
+		}
+
+		tcp::endpoint peer() const
+		{
+			if (is_v6_addr)
+				return tcp::endpoint(address_v6(addr.v6), port);
+			else
+				return tcp::endpoint(address_v4(addr.v4), port);
+		}
+
 		// number of bytes downloaded in this block
-		unsigned bytes_progress:16;
+		unsigned bytes_progress:15;
 		// the total number of bytes in this block
-		unsigned block_size:16;
+		unsigned block_size:15;
+	private:
+		// the type of the addr union
+		unsigned is_v6_addr:1;
+		unsigned unused:1;
+	public:
 		// the state this block is in (see block_state_t)
 		unsigned state:2;
 		// the number of peers that has requested this block
@@ -295,7 +327,6 @@ namespace libtorrent
 
 	struct TORRENT_EXPORT partial_piece_info
 	{
-		enum { max_blocks_per_piece = 512 };
 		int piece_index;
 		int blocks_in_piece;
 		// the number of blocks in the finished state
@@ -304,7 +335,7 @@ namespace libtorrent
 		int writing;
 		// the number of blocks in the requested state
 		int requested;
-		block_info blocks[max_blocks_per_piece];
+		block_info* blocks;
 		enum state_t { none, slow, medium, fast };
 		state_t piece_state;
 	};
